test/multiphaseEuler/populationBalance/negativeDrift/0.8/integerMoment0(N,v).bubbles
/*--------------------------------*- C++ -*----------------------------------*\
  =========                 |
  \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox
   \\    /   O peration     | Website:  https://openfoam.org
    \\  /    A nd           | Version:  12
     \\/     M anipulation  |
\*---------------------------------------------------------------------------*/
FoamFile
{
    format      ascii;
    class       volScalarField;
    location    "0.8";
    object      integerMoment0(N,v).bubbles;
}
// * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //

dimensions      [0 -3 0 0 0 0 0];

internalField   uniform 0.0307739;

boundaryField
{
    boundary
    {
        type            empty;
    }
}


// ************************************************************************* //
